--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/MoistCode/node-rust-playground/issues"
   },
-  "homepage": "https://github.com/MoistCode/node-rust-playground#readme"
+  "homepage": "https://github.com/MoistCode/node-rust-playground#readme",
+  "dependencies": {
+    "ffi": "^2.3.0"
+  }
 }
